--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,9 +8,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
 
+    <!-- First crash was due to the ListView not having an ID. Normal @+id/list
+    is not appropriate given there is a reference to another class in android -->
     <ListView
+        android:id="@android:id/list"
         android:text="@+id/list"
-        android:layout_width="256px"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
 </RelativeLayout>
