--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Added various aspects I thought were required: Used dimension resources to hold the size of
+various text sizes, adjusted the size of fonts to make them visually appealing, changed the format
+of font size so it runs constitently depending on the size of device used as well as fixing some
+issues with referencing widgets that are not sibling widgets in a relative layout-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
@@ -6,32 +10,37 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="64dp"
-        android:layout_height="64dp">
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/cake_list_height">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_toRightOf="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
+        <!-- Sp instead of px -->
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12px" />
+            android:textSize="@dimen/cake_title_size" />
 
+        <!-- Description Text Size should be smaller than title -->
         <TextView
             android:id="@+id/desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/title" />
+            android:layout_below="@id/title"
+            android:textSize="@dimen/cake_description_size"/>
+        <!-- 128 dp seemed like a reasonable size for the image -->
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="@dimen/cake_image_width"
+            android:layout_height="@dimen/cake_image_height"
+            android:layout_below="@id/desc"/>
 
     </RelativeLayout>
 
