--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Added sizes for text for easy change in accordance to best practise-->
+    <dimen name="cake_title_size">18sp</dimen>
+    <dimen name="cake_description_size">14sp</dimen>
+
+    <!-- Added heights of varies widgets-->
+    <dimen name="cake_image_width">128dp</dimen>
+    <dimen name="cake_image_height">128dp</dimen>
+    <dimen name="cake_list_height">64dp</dimen>
 </resources>
